notebook accuracy modified

--- a/Expense_model/Expense_Categorization_Model.ipynb
+++ b/Expense_model/Expense_Categorization_Model.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "e55f467b",
    "metadata": {},
    "outputs": [],
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "523452f3",
    "metadata": {},
    "outputs": [
@@ -179,7 +179,7 @@
        "4        Expense      INR  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "c6cead30",
    "metadata": {},
    "outputs": [
@@ -214,7 +214,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_63242/2190267759.py:2: UserWarning: Parsing dates in %d/%m/%Y %H:%M:%S format when dayfirst=False (the default) was specified. Pass `dayfirst=True` or specify a format to silence this warning.\n",
+      "/tmp/ipykernel_64282/2190267759.py:2: UserWarning: Parsing dates in %d/%m/%Y %H:%M:%S format when dayfirst=False (the default) was specified. Pass `dayfirst=True` or specify a format to silence this warning.\n",
       "  df['Date'] = pd.to_datetime(df['Date'], errors='coerce')\n"
      ]
     },
@@ -344,7 +344,7 @@
        "4        Expense      INR        6.0    9.0  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "81f5d6c4",
    "metadata": {},
    "outputs": [],
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "1e917704",
    "metadata": {},
    "outputs": [
@@ -890,7 +890,7 @@
        "                ('classifier', LogisticRegression(max_iter=1000))])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -939,7 +939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "ae5eb22e",
    "metadata": {},
    "outputs": [
@@ -1011,7 +1011,9 @@
       "                 accuracy                           0.54       493\n",
       "                macro avg       0.30      0.18      0.20       493\n",
       "             weighted avg       0.58      0.54      0.47       493\n",
-      "\n"
+      "\n",
+      "Accuracy (score method): 0.5436105476673428\n",
+      "Accuracy (manual calculation): 0.5436105476673428\n"
      ]
     },
     {
@@ -1031,7 +1033,8 @@
     "\n",
     "# Evaluation\n",
     "print(classification_report(y_test, y_pred))\n",
-    "\n",
+    "print(\"Accuracy (score method):\", model.score(X_test, y_test))\n",
+    "print(\"Accuracy (manual calculation):\", np.mean(y_pred == y_test))\n",
     "# Confusion Matrix\n",
     "plt.figure(figsize=(8,6))\n",
     "sns.heatmap(confusion_matrix(y_test, y_pred), annot=True, fmt='d', cmap=\"Blues\")\n",
@@ -1053,7 +1056,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "babb3a66",
    "metadata": {},
    "outputs": [
